--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     },
     "require": {
         "laravel/prompts": "^0.1",
-        "statamic/cms": "^5.0"
+        "statamic/cms": "^4.0 || ^5.0"
     }
 }
