Use inline bard for banner preset

--- a/resources/presets/banner/resources/blueprints/globals/banner.yaml
+++ b/resources/presets/banner/resources/blueprints/globals/banner.yaml
@@ -8,17 +8,14 @@ tabs:
           -
             handle: use_banner
             field:
-              default: false
               display: 'Use banner'
               type: toggle
-              icon: toggle
-              listable: hidden
-              instructions_position: above
               localizable: true
           -
             handle: text
             field: common.text_basic
             config:
               localizable: true
+              inline: true
               validate:
                 - 'required_if:use_banner,true'
