USe max_sets instead of max_rows for buttons replicator

--- a/resources/blocks/cards/cards.yaml
+++ b/resources/blocks/cards/cards.yaml
@@ -53,5 +53,5 @@ fields:
                   field: buttons.buttons
                   config:
                     display: Button
-                    max_rows: 1
+                    max_sets: 1
       hide_display: true
