--- a/resources/presets/pricing/resources/blueprints/collections/tiers/tier.yaml
+++ b/resources/presets/pricing/resources/blueprints/collections/tiers/tier.yaml
@@ -90,7 +90,7 @@ tabs:
             field: buttons.buttons
             config:
               display: Button
-              max_rows: 1
+              max_sets: 1
       -
         display: Benefits
         fields:
