Use `heading` instead of `title` for Heading fields

--- a/resources/blocks/call_to_action/call_to_action.yaml
+++ b/resources/blocks/call_to_action/call_to_action.yaml
@@ -1,13 +1,13 @@
 title: 'Call to action'
 fields:
   -
-    handle: title
+    handle: heading
     field:
       input_type: text
       type: text
       localizable: true
       listable: hidden
-      display: Title
+      display: Heading
       validate:
         - required
   -
