--- a/resources/blocks/image_and_text/image_and_text.yaml
+++ b/resources/blocks/image_and_text/image_and_text.yaml
@@ -1,11 +1,11 @@
 title: 'Image and text'
 fields:
   -
-    handle: title
+    handle: heading
     field:
       input_type: text
       antlers: false
-      display: Title
+      display: Heading
       type: text
       icon: text
       listable: hidden
