--- a/resources/blocks/text_columns/text_columns.yaml
+++ b/resources/blocks/text_columns/text_columns.yaml
@@ -1,11 +1,11 @@
 title: 'Text columns'
 fields:
   -
-    handle: title
+    handle: heading
     field:
       input_type: text
       antlers: false
-      display: Title
+      display: Heading
       type: text
       icon: text
       listable: hidden
