--- a/resources/presets/image_credits/resources/fieldsets/image_credits.yaml
+++ b/resources/presets/image_credits/resources/fieldsets/image_credits.yaml
@@ -1,13 +1,13 @@
 title: "Image credits"
 fields:
   -
-    handle: title
+    handle: heading
     field:
       input_type: text
       type: text
       localizable: true
       listable: hidden
-      display: Title
+      display: Heading
   -
     handle: text
     field: common.text_plain
