Remove before_footer option from default blocks preset

--- a/resources/presets/default_blocks/resources/blueprints/globals/default_blocks.yaml
+++ b/resources/presets/default_blocks/resources/blueprints/globals/default_blocks.yaml
@@ -47,9 +47,8 @@ tabs:
                             instructions: 'Where should these blocks automatically appear?'
                             options:
                               none: 'None (Manual only)'
-                              before_content: 'Before main content (inside main)'
-                              after_content: 'After main content (inside main)'
-                              before_footer: 'Before footer (outside main)'
+                              before_content: 'Before main content'
+                              after_content: 'After main content'
                             default: none
                             width: 50
                         -
